<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.bernardino.frustratelife.LoginAcitivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here_fl"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user" />

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btLoginId"
            android:onClick="login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <CheckBox
            android:id="@+id/cbKeepConnectedId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_connected" />


    </LinearLayout>

</RelativeLayout>
